Fixed alert container layout issues with overflowing -Andrew

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,7 +1,6 @@
 body {
   height: 100%;
   font-family: Calibri, "Segoe UI", Arial, sans-serif;
-  background-color: #89E6FB;
   overflow-y: scroll;
 }
 
